@@ -8,6 +8,10 @@ Core and builtins
   great many cyclic structures involving frames.  Reported on
   SourceForge as bug 543148.
 
+- A method zfill() was added to str and unicode, that fills a numeric
+  string to the left with zeros.  For example,
+  "+123".zfill(6) -> "+00123".
+
 - Complex numbers supported divmod() and the // and % operators, but
   these make no sense.  Since this was documented, they're being
   deprecated now.
